--- a/public/dev/index.html
+++ b/public/dev/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width, user-scalable=no">
-    <title>Node CMS</title>
+    <title>CMS by nodejs</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <link rel="shortcut icon" href="//www.le.com/favicon.ico">
@@ -12,6 +12,7 @@
 </head>
 <body>
 
-    <h1>Hello, World 1~</h1>
+    <h1>自动刷新你信不信~~~~哎呦，不错</h1>
 
+    <!--<script src="/reload/reload.js"></script>-->
 </html>
