--- a/public/dev/index.html
+++ b/public/dev/index.html
@@ -12,7 +12,11 @@
 </head>
 <body>
 
-    <h1>自动刷新你信不信~~~~哎呦，不错</h1>
+    <p>基于 node+webpack+react 的全栈示例</p>
+    <p>这是一个全部使用一种语言（JS）开发的网站。</p>
+    <p></p>
+    <p id="about"></p>
+    <img src="./images/avatar.png" alt="">
 
     <!--<script src="/reload/reload.js"></script>-->
 </html>
