--- a/public/dev/index.html
+++ b/public/dev/index.html
@@ -14,9 +14,10 @@
 
     <p>基于 node+webpack+react 的全栈示例</p>
     <p>这是一个全部使用一种语言（JS）开发的网站。</p>
-    <p></p>
-    <p id="about"></p>
-    <img src="./images/avatar.png" alt="">
+    <!--<p>添加了监听自动刷新功能。保存代码，页面自动刷新，你信不？</p>-->
+    <!--<p>试试修改css</p>-->
+    <!--<p>试试修改js</p>-->
+    <img id="img" style="display:none;margin:0 auto;" src="./images/kiss.gif" alt="">
 
     <!--<script src="/reload/reload.js"></script>-->
 </html>
