--- a/public/dev/index.html
+++ b/public/dev/index.html
@@ -7,12 +7,12 @@
     <title>CMS by nodejs</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <link rel="shortcut icon" href="//www.le.com/favicon.ico">
+    <link rel="shortcut icon" href="//img.zoocer.com/common/favicon.ico">
     <%=htmlWebpackPlugin.files.webpackManifest%>
 </head>
 <body>
 
-    <p>基于 node+webpack+react 的全栈示例</p>
+    <p>基于 node+webpack+react(vue) 的全栈网站</p>
     <p>这是一个全部使用一种语言（JS）开发的网站。</p>
     <!--<p>添加了监听自动刷新功能。保存代码，页面自动刷新，你信不？</p>-->
     <!--<p>试试修改css</p>-->
