--- a/public/dev/index.html
+++ b/public/dev/index.html
@@ -15,8 +15,7 @@
     <p>基于 node+webpack+react(vue) 的全栈网站</p>
     <p>这是一个全部使用一种语言（JS）开发的网站。</p>
     <!--<p>添加了监听自动刷新功能。保存代码，页面自动刷新，你信不？</p>-->
-    <!--<p>试试修改css</p>-->
-    <!--<p>试试修改js</p>-->
+    <!--<p>试试修改css 和 js</p>-->
     <img id="img" style="display:none;margin:0 auto;" src="./images/kiss.gif" alt="">
 
     <!--<script src="/reload/reload.js"></script>-->
