update webpack config

--- a/public/dev/index.html
+++ b/public/dev/index.html
@@ -8,10 +8,9 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <link rel="shortcut icon" href="//img.zoocer.com/common/favicon.ico">
-    <%=htmlWebpackPlugin.files.webpackManifest%>
+    <!--<%=htmlWebpackPlugin.files.webpackManifest%>-->
 </head>
 <body>
-
     <div class="para">
         <p>基于 node+webpack+react(vue) 的全栈网站</p>
         <p>这是一个全部使用一种语言（JS）开发的网站。</p>
