--- a/public/dev/index.html
+++ b/public/dev/index.html
@@ -34,4 +34,5 @@
     <img id="img" style="display:none;margin:0 auto;" src="./images/kiss.gif" alt="">
 
     <!--<script src="/reload/reload.js"></script>-->
+</body>
 </html>
