--- a/public/dev/index.html
+++ b/public/dev/index.html
@@ -27,10 +27,9 @@
         <p>
             <span>这是 &lt;10k 的图片：</span>
             <i class="icon"></i>
-            <img src="./images/icon-look.png" alt="">
+            <img class="img-look" src="./images/icon-look.png" alt="">
         </p>
     </div>
-
     <img id="img" style="display:none;margin:0 auto;" src="./images/kiss.gif" alt="">
 
     <!--<script src="/reload/reload.js"></script>-->
